k8s-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radio-bridge
  labels:
    app: radio-bridge
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: radio-bridge
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
